fix: spacing adjustments for cards on section 7

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -2130,6 +2130,11 @@
       margin-right: calc(var(--spacing) * 10);
     }
   }
+  .lg\:\!mb-7 {
+    @media (width >= 64rem) {
+      margin-bottom: calc(var(--spacing) * 7) !important;
+    }
+  }
   .lg\:\!mb-\[21\.83px\] {
     @media (width >= 64rem) {
       margin-bottom: 21.83px !important;
@@ -2485,6 +2490,11 @@
       padding-top: calc(var(--spacing) * 20) !important;
     }
   }
+  .lg\:pt-10 {
+    @media (width >= 64rem) {
+      padding-top: calc(var(--spacing) * 10);
+    }
+  }
   .lg\:pt-\[57px\] {
     @media (width >= 64rem) {
       padding-top: 57px;
@@ -2766,6 +2776,11 @@
       margin-right: 80px;
     }
   }
+  .xl\:\!mb-\[38px\] {
+    @media (width >= 80rem) {
+      margin-bottom: 38px !important;
+    }
+  }
   .xl\:ml-\[80px\] {
     @media (width >= 80rem) {
       margin-left: 80px;
@@ -2871,9 +2886,19 @@
       column-gap: 249px;
     }
   }
+  .xl\:pt-\[57px\] {
+    @media (width >= 80rem) {
+      padding-top: 57px;
+    }
+  }
   .xl\:\!pr-\[45\.74px\] {
     @media (width >= 80rem) {
       padding-right: 45.74px !important;
+    }
+  }
+  .xl\:pb-\[50px\] {
+    @media (width >= 80rem) {
+      padding-bottom: 50px;
     }
   }
   .xl\:\!pl-\[49px\] {
